add .gitignore and mulitpe language Cause: None Solution: None Fixed Version: None Branch: None

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+*.gitignore
+*.dsp
+*.dsw
+*.ncb
+*.opt
+*.plg
+*.sln
+*.suo
+*.vcproj*
+*.vcxproj*
+Debug
+*.lnk
 IOCPServer
-IOCPDemo
+*.opensdf
+*.sdf
+*.old
+*.XML
+_UpgradeReport_Files/
+*.Identifier*
+*.swp
+*.cpp~
+*.dll
+*.lib
+*.she
+*.h~
